Fix overflow for long inline code lines (#236)
* CherryPick 234b7ef
* reenables nowrap for code blocks
* moves styling for code-blocks to work without JS

--- a/assets/sass/_bilberry-hugo-theme.scss
+++ b/assets/sass/_bilberry-hugo-theme.scss
@@ -29,15 +29,20 @@
         }
     }
 
-    .hljs {
-        padding: 0.75em;
-        font-size: 0.9em;
+    pre {
+        code {
+            padding: 0.75em;
+            font-size: 0.9em;
+            white-space: nowrap;
+            overflow-x: scroll;
+        }
     }
 
     code {
         font-family: 'Fira Code', monospace;
         border: 0;
         margin: 0;
+        white-space: normal;
     }
 
     .bubble .fas {
